chore: update Zeabur template to use docker.io/apache/kvrocks:latest

--- a/zeabur.template.yaml
+++ b/zeabur.template.yaml
@@ -34,7 +34,7 @@ spec:
       template: PREBUILT_V2
       spec:
         source:
-          image: apache/kvrocks
+          image: docker.io/apache/kvrocks:latest
         ports:
           - id: database
             port: 6666
